fix spacing on project section

--- a/src/App.css
+++ b/src/App.css
@@ -106,14 +106,14 @@
 
 /* Portfolio section*/
 .portfolio {
-  height: 80vh
+  height: 100%
 }
 
 
 
 /* proj section */
 .project {
-  height: 80vh;
+  height: 100%;
 }
 .project-row {
   padding-block: 5%;
@@ -123,7 +123,8 @@
   height:100%;
 }
 .see-btn{
-  justify-content: center;}
+  justify-content: center;
+}
 
 /* Contact Section */
 .contact-row {
